[gray] 07/31/2025
[white]- Added extra research materials to Precursory River to prevent softlocks.

[gray] 04/16/2025
[white]- Updated title screen and banner
- Added link to the Wiki
- Fixed Rubiginosus and Neoulandia item / block visibility issues
- Neoulandia maps now have temporary icons
- Re-disabled launch loadouts

[gray] 04/11/2025
[white] Updated the mod to Mindustry V8
- Enabled Content Order for blocks in content tab, core database and building tab.
- Uncapped loading station and loading dockyard limit
- Rubiginosus maps now have icons
- Re-enabled launch loadouts

[gray] 03/04/2025
[white]- Added new map: Shrouded Assault
- Added environment tile: cold ice
- Harvesters work at 50% the efficiency of blue ice on cold ice.
- Fixed tutorial map

[gray] 20/03/2025
[white]- Fully revamped map: Precursory River
- Revamped environment of maps: Scouting Party, Forking Pathways, Serorjoen Mountains, Collier Chamber, Ice Spikes, Waterfall

[gray] 13/03/2025
[white]- Fully revamped tutorial map: Landing Ground
- Added new environment tiles and blocks
- Added sectors and geographical maps of Neoulandia menu
- Added update checking to the update button
- Fixed the team colour of destructible ice

[gray] 03/03/2025
[white]- Balanced turrets: creneau, machicoulis, parapet, redoubt, tour
- Balanced walls: barrier, platinum wall, adaptive wall
- Balanced units: Harfang, Snapdragon, Boechera, Fireweed, Trillium, Praetor, Heavy Strix
- Updated Large Storage Unit sprite
- Reordered Nickel and Platinum to be in line with other base materials
- Revamped environment of map: Ice Spikes

[gray] 21/02/2025
[white]- Added new map: Collier Chamber
- Added update and changelog menu buttons on title screen
- Added new blocks: Capsule Launcher and Mining Core
- Added new unit: Aedile

- Changed Neoulandia to allow starting loadouts (Start with more resources)
- Revamped map Serorjoen Mountains to use the new underground core.
- Buffed Passage
- Nerfed Loading Dockyard