@@ -12,7 +12,7 @@ sector.etigeox-miss1.description = [gold]Mission 1: Dividing Titanium.\n\n[white
 sector.etigeox-miss2.name = Ice Raid
 sector.etigeox-miss2.description = [gold]Mission 2: Ice Raid.\n\n[white]After obtaining titanium, we must take down the League's fortresses in the north. Break the stalemate and end their time in the frozen icey mountains.
 sector.etigeox-miss3.name = Cross Assault
-sector.etigeox-miss3.description = [gold]Mission 3: Cross Assault.\n\n[white]This island is split between our forces, the League and Independant mercenaries. Which one shall we take down first?\n\n[gray][Mod Author notes: This is quite possibly the worst map of the campaign. It is recommended to skip it straight to mission 4, which is unlocked. The quality of the maps do get better after this.]
+sector.etigeox-miss3.description = [gold]Mission 3: Cross Assault.\n\n[white]This island is split between our forces, the League and Independant mercenaries. The defences of both of their bases appear shaky. Which one shall we take down first?
 sector.etigeox-miss4.name = Sneeky Breeky
 sector.etigeox-miss4.description = [gold]Mission 4: Sneeky Breeky.\n\n[white]The League is very well entrenched from one side, however a secret lab and an unexploited piece of land aren't under their control. Strike from where is unexpected and be in control. It appears that the League has not detected our arrival and their reinforcements will be delayed as a result.
 sector.etigeox-miss5.name = Desert Highs
@@ -24,7 +24,7 @@ sector.etigeox-miss7.description = [gold]Mission 7: Molten Stronghold.\n\n[white
 sector.etigeox-miss8.name = Rivertide
 sector.etigeox-miss8.description = [gold]Mission 8: Rivertide.\n\n[white]Go forth downstream. The enemy is in the process of constructing a new airbase. Their lines of defenses aren't well established. Resources are extremely scarce. Our supply ships and resource receivers bring you the key to victory. Secure and protect them. Cut off their ability to contest the skies. Airstrikes are imminent.
 sector.etigeox-miss9.name = Toxopid Showdown
-sector.etigeox-miss9.description = [gold]Mission 9: Toxopid Showdown.\n\n[white]The Independant States League was pushed back to the far reaches of the waste islands without much resources. Our aerial supremacy allows High Command to direct any and all resources to your aid. Artillery strikes are imminent.
+sector.etigeox-miss9.description = [gold]Mission 9: Toxopid Showdown.\n\n[white]The League of Independant States was pushed back to the far reaches of the islands without much resources. Our aerial supremacy allows High Command to direct any and all resources to your aid. Artillery strikes are imminent.
 sector.etigeox-miss10.name = Naval Strike Force
 sector.etigeox-miss10.description = [gold]Mission 10: Naval Strike Force.\n\n[white]Our allied forces lay besieged by the enemy. Lead an Aircraft Carrier strike force to lift the siege and assert our dominance over the region once and for all.
 sector.etigeox-missex11.name = Aerial Assault
@@ -32,9 +32,11 @@ sector.etigeox-missex11.description = [gold]Mission 11: Aerial Assault.\n\n
 sector.etigeox-missex12.name = Valley Forge
 sector.etigeox-missex12.description = [gold]Mission 12: Valley Forge\n\n
 sector.etigeox-missex13.name = Nuclear Deconstruction
-sector.etigeox-missex13.description = [gold]Extra Mission 13: Nuclear Deconstruction.\n\n[white]Special gamemode bonus mission. No enemies are present to torment you on this sector. Decontruction via Mega payload carrying is the only fun way to obtain materials.\n\nHarvest as many resources as you can and gain the highest possible score.
+sector.etigeox-missex13.description = [gold]Extra Mission 13: Nuclear Deconstruction.\n\n[white]Special gamemode bonus mission. No enemies are present to torment you on this sector. Decontruction via Mega payload carrying is the only viable way to obtain materials.\n\nHarvest as many resources as you can and gain the highest possible score.
 sector.etigeox-missex14.name = Depth Charges
 sector.etigeox-missex14.description = [gold]Extra Mission 14: Depth Charges: Attack Variation.\n\n[white]Bonus mission. The staple resource of this map is scrap, hidden within the scrap walls. Rarer resources are coal and thorium. An underground sea is hidden beneath the scrap walls.
+sector.etigeox-missex15.name = Lightning Snakes
+sector.etigeox-missex15.description = [gold]Extra Mission 15: Lightning Snakes.\n\n[white]Bonus mission. This sector is split between our forces, the League and the blue faction. The lack of resources for power is important, perhaps we can flank, take out the enemy blue faction, and take over their base?
 sector.etigeox-miss-unknown.name = ???
 sector.etigeox-miss-unknown.description = ???
 
@@ -500,6 +502,12 @@ etigeox.news.update.available = New version available
 etigeox.news.file = news.txt
 etigeox.update = A new Etigei Exile version is available: {0}
 etigeox.update.description = Do you wish to update the mod to the latest version?
+etigeox.addon = Downloading Addon
+etigeox.addon.description = Do you wish to install or update this addon?
+etigeox.accura = Downloading Terra Accura
+etigeox.accura.description = Mod currently unreleased.
+etigeox.sefirah = Downloading Sefirah
+etigeox.sefirah.description = Error 403. Mod intended for mod developer purposes.
 
 etigeox.map.title = Etigei Exile - Map of Neoulandia
 etigeox.map.tab1 = Sectors Map
